--- a/src/app/components/consultaexistencias/consultaexistencias.component.html
+++ b/src/app/components/consultaexistencias/consultaexistencias.component.html
@@ -78,7 +78,7 @@
               <input class="form-check-input" type="radio" name="gridRadios1" id="idSoloEx" value="S" #nombre="ngModel"
                 [(ngModel)]="oBuscar.SoloExist" />
               <label class="form-check-label CamposFonelli" for="gridRadios1">
-                Solo Existencias
+                Solo articulos con existencia
               </label>
             </div>
             <div class="form-check">
