--- a/src/app/components/pedclte-lista/pedclte-lista.component.html
+++ b/src/app/components/pedclte-lista/pedclte-lista.component.html
@@ -8,7 +8,7 @@
   </p>
 </div>
 
-<!-- Criterios de filtro -->
+<!------------------------------------   Criterios de filtro   ---------------------------------->
 <div #collapse="ngbCollapse" class="container float-left" [(ngbCollapse)]="isCollapsed">
   <div class="card">
     <div class="card-body">
@@ -105,7 +105,7 @@
 </div>
 <!-- Fin Criterios de filtro -->
 
-<!-- Formulario con encabezado y tabla con resumen de Pedidos de Venta -->
+<!------- Formulario con encabezado y tabla con resumen de Pedidos de Venta ------->
 <div class="container float-left" [hidden]="!bBandera">
   <br>
   <h3 style="text-align: center; font-size:xx-large;">Número
@@ -113,7 +113,7 @@
     {{oPedclteListaResult.Contenido.ClienteNombre}}
   </h3>
 
-  <!-- Tabla que presenta lista de pedidos-->
+  <!--------------------- Tabla que presenta LISTA DE PEDIDOS --------------------->
   <div class="container" id="pdfTable" #pdfTable>
     <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
       <thead class="thead-p">
@@ -126,32 +126,32 @@
             Fecha Pedido
           </th>
           <th style="background-color: #24a4cc; color: white; text-align: center;" class="col-fecha" scope="col">
-            Fecha CancOP
+            Fecha CancOp
           </th>
           <th style="background-color: #24a4cc; color: white; text-align: center;" class="col-fecha" scope="col">
             Fecha Surtido
           </th>
-          <th style="background-color: #24a4cc; color: white; text-align:right;">Pedido</th>
-          <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">Surtido</th>
-          <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">Difcia</th>
-          <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">Orden Comp</th>
+          <th style="background-color: #24a4cc; color: white; text-align:center;">Piezas Pedido</th>
+          <th style="background-color: #24a4cc; color: white; text-align:center;" scope="col">Piezas Surtido</th>
+          <th style="background-color: #24a4cc; color: white; text-align:center;" scope="col">Difcia</th>
+          <th style="background-color: #24a4cc; color: white; text-align:center;" scope="col">Orden Comp</th>
           <th style="background-color: #24a4cc; color: white; text-align:center;" scope="col">Tda Dest</th>
         </tr>
       </thead>
       <tbody>
         <!--  (click)="openPedidoDetalle(PedidoDetalle,ped.PedidoFolio)" -->
-        <tr *ngFor="let ped of pedido ; index as i" (click)="clicLink()">
+        <tr *ngFor="let ped of pedido ; index as i" (click)="clicDetallePed(ped)">
           <!-- <th scope="row">{{ i + 1 }}</th> -->
           <td class="FilasFonelli">{{ ped.OficinaFonelliCodigo}}</td>
           <td class="FilasFonelli"> <u>{{ped.PedidoFolio}}</u> </td>
           <td class="FilasFonelli" style="text-align:left">{{ ped.Status}}</td>
-          <td class="FilasFonelli col-fecha" style="text-align:center">{{ ped.FechaPedido}}</td>
-          <td class="FilasFonelli col-fecha" style="text-align:center">{{ ped.FechaCancelacion}}</td>
-          <td class="FilasFonelli col-fecha" style="text-align:center">{{ ped.FechaSurtido}}</td>
-          <td class="FilasFonelli" style="text-align:right">{{ ped.CantidadPedida}}</td>
-          <td class="FilasFonelli" style="text-align:right">{{ ped.CantidadSurtida}}</td>
-          <td class="FilasFonelli" style="text-align:right">{{ ped.DiferenciaPedidosSurtido}}</td>
-          <td class="FilasFonelli" style="text-align:right">{{ ped.OrdenCompra}}</td>
+          <td class="FilasFonelli col-fecha">{{ ped.FechaPedido}}</td>
+          <td class="FilasFonelli col-fecha">{{ ped.FechaCancelacion}}</td>
+          <td class="FilasFonelli col-fecha">{{ ped.FechaSurtido}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{ ped.CantidadPedida}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{ ped.CantidadSurtida}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{ ped.DiferenciaPedidosSurtido}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{ ped.OrdenCompra}}</td>
           <td class="FilasFonelli" style="text-align:center">{{ ped.TiendaDestino}}</td>
         </tr>
         <tr>
@@ -161,10 +161,10 @@
           <td></td>
           <td></td>
           <td class="FilasFonelli" style="text-align:left">Total General</td>
-          <td class="FilasFonelli" style="text-align:right">{{ oPedclteListaResult.Contenido.CantidadPedida}}</td>
-          <td class="FilasFonelli" style="text-align:right">{{ oPedclteListaResult.Contenido.CantidadPedida -
+          <td class="FilasFonelli" style="text-align:center">{{ oPedclteListaResult.Contenido.CantidadPedida}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{ oPedclteListaResult.Contenido.CantidadPedida -
             oPedclteListaResult.Contenido.DiferenciaPedidosSurtido}}</td>
-          <td class="FilasFonelli" style="text-align:right">{{ oPedclteListaResult.Contenido.DiferenciaPedidosSurtido}}
+          <td class="FilasFonelli" style="text-align:center">{{ oPedclteListaResult.Contenido.DiferenciaPedidosSurtido}}
           </td>
           <td></td>
           <td></td>
@@ -174,7 +174,7 @@
   </div>
 </div>
 
-<!--Modal catalogo clientes-->
+<!----------------------------- Modal catalogo clientes --------------------------->
 <ng-template #Clientes let-modal>
   <div class="modal-header">
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
@@ -241,3 +241,164 @@
   </div>
 
 </ng-template>
+
+<!-----------------------   Tabla con articulos del pedido   ---------------------->
+<div class="container float-left" [hidden]="!MostrarArticulos">
+  <br>
+
+  <!------------------------- Datos generales del pedido -------------------------->
+  <div class="container mt-6">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card-title">Detalle del Pedido: <strong>{{ sPedidoFolio }} </strong></div>
+          </div>
+          <div class="col-md-2">
+            <button type="submit" class="btn btn-link" (click)="clicCerrarDetallePed()">Volver</button>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-3">
+            Fecha: {{ sPedidoFecha }}
+          </div>
+          <div class="col-md-4">
+            Cliente:
+            {{oPedclteListaResult.Contenido.ClienteCodigo}}-{{oPedclteListaResult.Contenido.ClienteFilial}}
+            {{oPedclteListaResult.Contenido.ClienteNombre}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-------------------- Tabla que presenta articulos del pedido ------------------->
+  <div class="container" id="DetallePedTable" #DetallePedTable>
+    <div class="table table-hover table-striped">
+      <thead class="thead-p">
+        <tr class="EncTabla">
+          <th scope="col">Lin</th>
+          <th scope="col">Modelo</th>
+          <th scope="col">Stat</th>
+          <th scope="col" class="col-fecha">Fec Ped</th>
+          <th scope="col" style="text-align:center">Pzas Pedido</th>
+          <th scope="col" style="text-align:center">Pzas Prod</th>
+          <th scope="col" style="text-align:center">Diferencia</th>
+          <th scope="col">Descripción</th>
+          <th scope="col" style="text-align:center">Tallas</th>
+          <!--
+          <th scope="col" style="text-align:center">3</th>
+          <th scope="col" style="text-align:center">3.5</th>
+          <th scope="col" style="text-align:center">4</th>
+          <th scope="col" style="text-align:center">4.5</th>
+          <th scope="col" style="text-align:center">5</th>
+          <th scope="col" style="text-align:center">5.5</th>
+          <th scope="col" style="text-align:center">6</th>
+          <th scope="col" style="text-align:center">6.5</th>
+          <th scope="col" style="text-align:center">7</th>
+          <th scope="col" style="text-align:center">7.5</th>
+          <th scope="col" style="text-align:center">8</th>
+          <th scope="col" style="text-align:center">8.5</th>
+          <th scope="col" style="text-align:center">9</th>
+          <th scope="col" style="text-align:center">9.5</th>
+          <th scope="col" style="text-align:center">10</th>
+          <th scope="col" style="text-align:center">10.5</th>
+          <th scope="col" style="text-align:center">11</th>
+          <th scope="col" style="text-align:center">11.5</th>
+          <th scope="col" style="text-align:center">12</th>
+          <th scope="col" style="text-align:center">12.5</th>
+          <th scope="col" style="text-align:center">13</th>
+          <th scope="col" style="text-align:center">13.5</th>
+          <th scope="col" style="text-align:center">14</th>
+          <th scope="col" style="text-align:center">14.5</th>
+          <th scope="col" style="text-align:center">15</th>
+          <th scope="col" style="text-align:center">15.5</th>
+          <th scope="col" style="text-align:center">MedX</th>
+          <th scope="col" style="text-align:center">CanX</th>
+          -->
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let det of pedidoDet; index as i">
+          <td class="FilasFonelli">{{det.ArticuloLinea}}</td>
+          <td class="FilasFonelli" style="width: 150px;">{{det.ArticuloCodigo}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.PedidoStatus}}</td>
+          <td class="FilasFonelli col-fecha" style="width: 120px;">{{det.FechaPedido}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.CantidadPedida}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.CantidadSurtida}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.CantidadPedida - det.CantidadSurtida}}</td>
+          <td class="FilasFonelli" style="width: 300px;">{{det.ArticuloDescripc}}</td>
+          <td class="FilasFonelli" style="text-align:center">
+            <div *ngIf="det.Medidas">
+              <button class="btn btn-light btn-sm" (click)="openModalMedidasPedclte(det)">
+                Ver tallas
+              </button>
+            </div>
+            <div *ngIf="!det.Medidas">NA</div>
+          </td>
+          <!--
+          <td class="FilasFonelli" style="text-align:center">{{ det.cp3 === 0 ? '' : det.cp3}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp35 === 0 ? '' :
+            det.cp35}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp4 === 0 ? '' : det.cp4}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp45 === 0 ? '' :
+            det.cp45}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp5 === 0 ? '' : det.cp5}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp55 === 0 ? '' :
+            det.cp55}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp6 === 0 ? '' : det.cp6}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp65 === 0 ? '' :
+            det.cp65}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp7 === 0 ? '' : det.cp7}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp75 === 0 ? '' :
+            det.cp75}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp8 === 0 ? '' : det.cp8}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp85 === 0 ? '' :
+            det.cp85}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp9 === 0 ? '' : det.cp9}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp95 === 0 ? '' :
+            det.cp95}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp10 === 0 ? '' : det.cp10}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp105 === 0 ? '' :
+            det.cp105}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp11 === 0 ? '' : det.cp11}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp115 === 0 ? '' :
+            det.cp115}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp12 === 0 ? '' : det.cp12}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp125 === 0 ? '' :
+            det.cp125}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp13 === 0 ? '' : det.cp13}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp135 === 0 ? '' :
+            det.cp13}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp14 === 0 ? '' : det.cp14}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp145 === 0 ? '' :
+            det.cp145}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp15 === 0 ? '' : det.cp15}}
+          </td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cp155 === 0 ? '' :
+            det.cp155}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.mpx}}</td>
+          <td class="FilasFonelli" style="text-align:center">{{det.cpx === 0 ? '' :
+            det.cpx}}</td>
+            -->
+        </tr>
+      </tbody>
+    </div>
+  </div>
+
+</div>
