--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -46,8 +46,13 @@
             class="font_side">Datos de clientes</span></a>
         <a mat-list-item [routerLink]="['/distribuidores/consultaprecios/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de precios</span></a>
-        <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']" routerLinkActive="active-list-item"><span
+        <!--
+            <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de pedidos</span></a>
+            -->
+        <a mat-list-item [routerLink]="['/asesores/pedclte-lista/']" routerLinkActive="active-list-item"><span
+            class="font_side">Consulta de pedidos</span></a>
+
         <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']" routerLinkActive="active-list-item"><span
             class="font_side">Relación de pedidos</span></a>
         <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']" routerLinkActive="active-list-item"><span
